--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -117,7 +117,7 @@
     <div class="brand">
       <div class="brand__logo" aria-hidden="true"></div>
       <div>
-        <div style="font-weight:700; letter-spacing:.3px">CinemaX</div>
+        <div style="font-weight:700; letter-spacing:.3px">Lotto</div>
         <div style="font-size:12px; color:var(--muted)">Welcome back</div>
       </div>
     </div>
