--- a/Frontend/Homepage/header.html
+++ b/Frontend/Homepage/header.html
@@ -27,9 +27,10 @@
             </span>
             <!-- Thêm phần này vào trong <div class="nav__login"> -->
             <span class="nav__logout-txt">
-    <a id="logoutLink" href="#" style="display: none;">Đăng xuất</a>
-</span>
+                <a id="logoutLink" href="#" style="display: none;">Đăng xuất</a>
+            </span>
 
         </div>
     </div>
 </header>
+<script src="../Homepage/loadheader.js"></script>
