--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -221,5 +221,6 @@
     // Tự focus vào tên đăng nhập khi mở trang
     window.addEventListener('DOMContentLoaded', () => user.focus());
   </script>
+  <script src="login.js"></script>
 </body>
 </html>
